@@ -2,6 +2,7 @@ Version 1.6:
 
 (2013-02-26)
  * Save the recording list.
+ * Add a button to open the recording dialog.
 
 (2013-02-10)
  * Add the Hebrew translaton, by Genghis Khan <genghiskhan at gmx dot ca>
